Attempt to improve SEO with meta description

--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Jim Crockett</title>
   <base href="/">
+  <meta name="description" content="Jim Crockett's personal, about me website with information and links to know more about who Jim Crockett is." />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
