--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -5,8 +5,13 @@
   <title>Jim Crockett</title>
   <base href="/">
   <meta name="description" content="Jim Crockett's personal, about me website with information and links to know more about who Jim Crockett is." />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <meta property="og:title" content="Jim Crockett" />
+  <meta property="og:url" content="https://www.jimcrockett.info" />
+  <meta property="og:type" content="website" />
+  <meta name="og:description" content="Jim Crockett's personal, about me website with information and links to know more about who Jim Crockett is." />
+  <meta name="og:image" contents="https://www.jimcrockett.info/assets/images/background.jpg" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
