--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -13,6 +13,7 @@
   <meta name="og:description" content="Jim Crockett's personal, about me website with information and links to know more about who Jim Crockett is." />
   <meta name="og:image" contents="https://www.jimcrockett.info/assets/images/background.jpg" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body>
   <style>
