--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta http-equiv="Cache-Control" content="no-store" />
   <meta charset="utf-8">
   <title>Jim Crockett</title>
   <base href="/">
@@ -12,17 +13,8 @@
   <meta property="og:type" content="website" />
   <meta name="og:description" content="Jim Crockett's personal, about me website with information and links to know more about who Jim Crockett is." />
   <meta name="og:image" contents="https://www.jimcrockett.info/assets/images/background.jpg" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-  <style>
-    body {
-      padding: 1%;
-      color: #000;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-size: 1em;
-    }
-  </style>
   <app-root></app-root>
 </body>
 </html>
